--- a/public/index.html
+++ b/public/index.html
@@ -207,14 +207,14 @@ line-height: 1.4;
 <body>
 <section class='container'>
           <hgroup>
-            <h1>Welcome to the earth.</h1>
+            <h1>This is just a demo.</h1>
           </hgroup>
 
 
         <div class="row">
           <section class='col-xs-12 col-sm-6 col-md-6'>
             <section>
-              <h2>What's the difference between Max and Earth?</h2>
+              <h2>Welcome to this website.</h2>
                 <p>OpenShift uses the <a href="http://git-scm.com/">Git version control system</a> for your source code, and grants you access to it via the Secure Shell (SSH) protocol. In order to upload and download code to your application you need to give us your <a href="https://developers.openshift.com/en/managing-remote-connection.html">public SSH key</a>. You can upload it within the web console or install the <a href="https://developers.openshift.com/en/managing-client-tools.html">RHC command line tool</a> and run <code>rhc setup</code> to generate and upload your key automatically.</p>
 
                 <h3>Working in your local Git repository</h3>
