--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -26,6 +26,9 @@
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/home/home.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
+    <script src="views/users/login.controller.js"></script>
+    <script src="services/forms.service.client.js"></script>
+    <script src="views/forms/forms.controller.js"></script>
 
     <title>Home</title>
 
