--- a/public/assignment/index.html
+++ b/public/assignment/index.html
@@ -29,6 +29,7 @@
     <script src="views/users/login.controller.js"></script>
     <script src="services/forms.service.client.js"></script>
     <script src="views/forms/forms.controller.js"></script>
+    <script src="views/forms/fields.controller.js"></script>
 
     <title>Home</title>
 
