--- a/public/index.html
+++ b/public/index.html
@@ -214,8 +214,8 @@ line-height: 1.4;
         <div class="row">
           <section class='col-xs-12 col-sm-6 col-md-6'>
             <section>
-              <a href="assignment/views/home/home.view.html">
-              <h2 style="color: blue;">Link to assignment1.</h2>
+              <a href="assignment/index.html">
+              <h2 style="color: blue;">Link to assignment2.</h2>
                 </a>
                 <p>OpenShift uses the <a href="http://git-scm.com/">Git version control system</a> for your source code, and grants you access to it via the Secure Shell (SSH) protocol. In order to upload and download code to your application you need to give us your <a href="https://developers.openshift.com/en/managing-remote-connection.html">public SSH key</a>. You can upload it within the web console or install the <a href="https://developers.openshift.com/en/managing-client-tools.html">RHC command line tool</a> and run <code>rhc setup</code> to generate and upload your key automatically.</p>
 
