--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -22,14 +22,17 @@
     <script src="views/sidebar/sidebar.controller.js"></script>
     <script src="views/main/main.controller.js"></script>
     <script src="views/users/register.controller.js"></script>
-    <script src="services/user.service.client.js"></script>
     <script src="views/admin/admin.controller.js"></script>
     <script src="views/home/home.controller.js"></script>
     <script src="views/users/profile.controller.js"></script>
     <script src="views/users/login.controller.js"></script>
-    <script src="services/forms.service.client.js"></script>
     <script src="views/forms/forms.controller.js"></script>
     <script src="views/forms/fields.controller.js"></script>
+
+    <!--client services-->
+    <script src="services/user.service.client.js"></script>
+    <script src="services/forms.service.client.js"></script>
+    <script src="services/forms.service.client.js"></script>
 
     <title>Home</title>
 
