--- a/public/assignment/client/index.html
+++ b/public/assignment/client/index.html
@@ -32,7 +32,7 @@
     <!--client services-->
     <script src="services/user.service.client.js"></script>
     <script src="services/forms.service.client.js"></script>
-    <script src="services/forms.service.client.js"></script>
+    <script src="services/field.service.client.js"></script>
 
     <title>Home</title>
 
