fix list show bug

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Welcome to Zhiyuan Yang's Homepage</h1>
 <h2><a href="assignment/client/index.html"> Assignment</a></h2>
-<h2><a href="blog/client/index.html"> Project(Draft)</a></h2>
+<h2><a href="blog/client/index.html"> Project</a></h2>
 </body>
 </html>
